# cnpy

./: CMakeLists.txt  cnpy.cpp  cnpy.h  numpy_defs.h
